--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-snowpack-app" />
-    <link rel="stylesheet" type="text/css" href="/index.css" />
-    <title>Snowpack App</title>
-  </head>
-  <body>
-    <img id="img" src="/logo.svg" />
-    <canvas id="canvas"></canvas>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="module" src="/dist/index.js"></script>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Business Days Counter</title>
+</head>
+<link rel="stylesheet" href="index.css">
+<script type="module" src="dist/index.js"></script>
+<body>
+    <h2>Business Days Counter</h2>
+    <div class="display">
+      <div>
+        <form id="businessDaysForm">
+          <div id="card">
+            <div class="input">
+                <label for="firstDate">First Date:</label>
+                <input type="date" id="firstDate" name="firstDate" value="2023-06-01" required>
+            </div>
+            <div class="input">
+                <label for="secondDate">Second Date:</label>
+                <input type="date" id="secondDate" name="secondDate" value="2023-06-07" required>
+            </div>
+          </div>
+          <button type="submit" >Calculate Days</button>
+        </form>
+      </div>
+    <div class="tablediv">
+    <table id="table">
+      <tr>
+        <th>Type</th>
+        <th>Count</th>
+      </tr>
+      <tr>
+        <td>Weekdays</td>
+        <td id="weekdays"></td>
+      </tr>
+      <tr>
+        <td>Business Days</td>
+        <td id="businessdays"></td>
+      </tr>
+    </table>
+    </div>
+    </div>
+</body>
 </html>
